# WeatherODE

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: global_forecast_weatherode.yaml  regional_forecast_weatherode.yaml
scripts/global/: train12h.sh  train18h.sh  train24h.sh  train6h.sh
scripts/regional/Australia/: train12h.sh  train18h.sh  train24h.sh  train6h.sh
scripts/regional/NorthAmerica/: train12h.sh  train18h.sh  train24h.sh  train6h.sh
scripts/regional/SouthAmerica/: train12h.sh  train18h.sh  train24h.sh  train6h.sh
src/data_preprocessing/: nc2np_equally_cmip6.py  nc2np_equally_era5.py
src/weatherode/: blocks.py  c3d.py  cnn_dit.py  dit.py  ode.py  ode_utils.py
src/weatherode/global_forecast/: datamodule.py  module.py  train.py
src/weatherode/pretrain/: datamodule.py  dataset.py  module.py  train.py
src/weatherode/regional_forecast/: datamodule.py  module.py  ode.py  train.py
src/weatherode/utils/: metrics.py
